css/stylesheet.sass
---
---

//  heavily inspired from https://github.com/nicokant/readable-css

$font: 'iA Writer Duospace'
$title-font: $font
$sansFont: monospace
$baseFontSize: 1.2em
$line-height: 1.3em
$max-width: 32em
$text-color: black
$text-color-dark: white
$background-dark: black
$title-color: #222
$title-color-dark: white
$subtitle-color: #777
$marker-color: rgba(82, 232, 165, 0.3)
$table-background-color: rgb(58, 83, 155)
$table-text-color: #222
$table-text-color-dark: white
$table-border-color: #777
$primary-color: #2980b9

=marginDefault ($fontSize)
  margin-top: $fontSize * 1.5
  margin-bottom: $fontSize * 1.5
  margin-right: 0
  margin-left: 0

body
  font-family: $font
  overflow-x: hidden
  padding-left: $baseFontSize * 2
  padding-right: $baseFontSize * 2

// content
p
  +marginDefault($baseFontSize)
  line-height: $line-height
  // text-align: justify

ul li,
ol li
  font-size: $baseFontSize

nav ul li
  margin-top: 0
  margin-bottom: 0

blockquote
  +marginDefault($baseFontSize)
  margin-left: 0
  border-left: $baseFontSize/4 solid $primary-color
  padding-left: $baseFontSize
  margin-left: -($baseFontSize/4 + $baseFontSize)

// header

h1
  margin-top: 0

h1, h2, h3, h4, h5, h6
  font-family: $title-font
  font-weight: 600
  margin-bottom: $baseFontSize / 2
h1
  font-size: $baseFontSize * 3
  // margin-top: $baseFontSize * 2
h2
  font-size: $baseFontSize * 2
  margin-top: $baseFontSize
h3
  font-size: $baseFontSize * 1.5
  margin-top: $baseFontSize
h4, h5, h6
  font-size: $baseFontSize
  margin-top: $baseFontSize

footer
  margin-bottom: 2rem
  margin-top: 2rem
  // padding-top: 1rem

section
  margin-top: $baseFontSize * 4
  margin-bottom: $baseFontSize * 4

header nav ul
  list-style: none
  display: flex
  justify-content: space-between

// inline

a
  color: $primary-color
  // text-decoration: underline

p, li, quote
  font-size: $baseFontSize

mark
  background-color: $primary-color
  color: white

  a
    color: white

strong, b
  font-weight: 700

em, i, cite, blockquote, q
  font-style: italic

p, code
  font-size: $baseFontSize

code
  font-family: monospace

small
  font-size: $baseFontSize * 0.6

big
  font-size: $baseFontSize * 1.2

abbr[title], acronym[title]
  text-decoration: underline dotted

sup
  vertical-align: super
  font-size: $baseFontSize * 0.6

sub
  vertical-align: sub
  font-size: $baseFontSize * 0.6

u
  text-decoration: underline

hr
  width: $baseFontSize * 3
  // border-top: 0px
  // border-bottom: dashed 2px

// list

ol
  list-style: decimal outside none
dl
  +marginDefault($baseFontSize)

  dt
    font-weight: 700
  dd
    margin-left: $baseFontSize
  dt + dd
    margin-bottom: $baseFontSize

// media

img
  max-width: 100%
  display: block
  margin: $baseFontSize auto

  &.big
    +marginDefault($baseFontSize)
    width: 120%
    margin-left: -10%

table
  text-align: center
  vertical-align: middle
  width: 100%

  border-top: 2px solid

  td
    border-bottom: 1px solid
  th
    border-bottom: 2px solid

  th
    font-weight: 700

ul, ol
  padding-left: 0

ul
  list-style: none
  position: relative

  li::before
    content: ' - '
    position: absolute
    right: 100%
    margin-right: $baseFontSize / 2
    display: inline-block
    text-align: right

// custom

div.highlighter-rouge
  position: relative
  padding-left: $baseFontSize
  border-left: $baseFontSize/4 solid $primary-color
  margin-left: -($baseFontSize/4 + $baseFontSize)

code.highlighter-rouge
  color: $primary-color

ul.list-inline
  list-style-type: none
  padding-left: 0
  // @include marginDefault($baseFontSize)

  & > li ~ li::before
    content: ' - '
    // padding-right: 1em

  li
    margin: 0
    display: inline

.text-right
  text-align: right

.text-justify
  text-align: justify

.m-0
  margin: 0

.my-1
  margin-top: 1rem
  margin-bottom: 1rem

.mt-0
  margin: 0

.hide
  display: none

div.footnotes
  margin-top: $baseFontSize * 3
  p
    margin-top: 0
    margin-bottom: 0

// MARKDOWN

// h1, h2, h3, h4, h5, h6
//   position: relative

// h1:before, h2:before, h3:before, h4:before, h5:before, h6:before
//   color: $primary-color
//   position: absolute
//   right: 100%
//   margin-right: $baseFontSize
//   display: inline-block
//   text-align: right

// h2:before
//   content: '## '
//   color: $primary-color

// h3:before
//   content: '### '
//   color: $primary-color

// h4:before
//   content: '#### '
//   color: $primary-color

// h5:before
//   content: '##### '
//   color: $primary-color

// h6:before
//   content: '###### '
//   color: $primary-color

// MEDIA

@media screen
  body
    max-width: 900px
    margin: auto

  h1
    font-size: $baseFontSize * 3

  h2
    font-size: $baseFontSize * 2

  pre.highlight
    overflow-x: auto
    overflow-y: hidden

  .hidden
    display: none

  img
    max-width: 100%

  .only-print
    display: none !important

@media print
  footer, header, .no-print
    display: none !important

  a
    text-decoration: none

@media (prefers-color-scheme: light)
  h1, h2, h3, h4, h5, h6
    color: $title-color

  body
    color: $text-color

  table
    color: $table-text-color

@media (prefers-color-scheme: dark)
  h1, h2, h3, h4, h5, h6
    color: $title-color-dark

  body
    background: $background-dark
    color: $text-color-dark

  button, .button
    background: $background-dark
    color: $text-color-dark
    border-color: $text-color-dark

  input
    &[type="button"], &[type="reset"], &[type="submit"]
      background: $background-dark
      color: $text-color-dark
      border-color: $text-color-dark

  input
    &[type="email"], &[type="number"], &[type="password"], &[type="search"], &[type="tel"], &[type="text"], &[type="url"]
      color: $text-color-dark
      border-color: $text-color-dark

  textarea, select
    color: $text-color-dark
    border-color: $text-color-dark

  td, th
    border-bottom-color: $text-color-dark

  blockquote
    border-left-color: $primary-color

  hr
    border-color: white

  table
    color: $table-text-color-dark

  // .highlight .hll
  //   background-color: black
  // .highlight
  //   background: black

@font-face
  font-family: "iA Writer Duospace"
  font-weight: normal
  font-style: normal
  src: url("/fonts/iAWriterDuospace-Regular.eot") format("embedded-opentype"), url("/fonts/iAWriterDuospace-Regular.woff2") format("woff2"), url("/fonts/iAWriterDuospace-Regular.woff") format("woff")

@font-face
  font-family: "iA Writer Duospace"
  font-weight: normal
  font-style: italic
  src: url("/fonts/iAWriterDuospace-Italic.eot") format("embedded-opentype"), url("/fonts/iAWriterDuospace-Italic.woff2") format("woff2"), url("/fonts/iAWriterDuospace-Italic.woff") format("woff")

@font-face
  font-family: "iA Writer Duospace"
  font-weight: bold
  font-style: normal
  src: url("/fonts/iAWriterDuospace-Bold.eot") format("embedded-opentype"), url("/fonts/iAWriterDuospace-Bold.woff2") format("woff2"), url("/fonts/iAWriterDuospace-Bold.woff") format("woff")

@font-face
  font-family: "iA Writer Duospace"
  font-weight: bold
  font-style: italic
  src: url("/fonts/iAWriterDuospace-BoldItalic.eot") format("embedded-opentype"), url("/fonts/iAWriterDuospace-BoldItalic.woff2") format("woff2"), url("/fonts/iAWriterDuospace-BoldItalic.woff") format("woff")

// POST

.row
  display: flex

#landing
  h2
    margin-top: $baseFontSize

  section.main
    min-height: 50vh
    margin-top: 0
    margin-bottom: 0

    display: flex
    flex-direction: column
    justify-content: end

    p
      font-size: $baseFontSize * 2
      margin-top: 0
      margin-bottom: $baseFontSize / 2

